--- a/EMS/rapport-intervention.html
+++ b/EMS/rapport-intervention.html
@@ -470,7 +470,7 @@
 
             if (medecinId) {
                 try {
-                    const response = await fetch(`http://localhost:3000/medecins/${medecinId}`);
+                    const response = await fetch(`https://c96a-37-174-211-91.ngrok-free.app/medecins/${medecinId}`);
 
                     if (!response.ok) {
                         throw new Error(`Erreur ${response.status}: ${response.statusText}`);
