--- a/EMS/rapport-intervention.html
+++ b/EMS/rapport-intervention.html
@@ -82,6 +82,12 @@
         <div style="display: flex; justify-content: center;">
             <button type="submit" class="btn-download">Envoyer le rapport</button>
         </div>
+        <footer>
+            <div class="footer-content">
+                <p>&copy; 2025 Hôpital Pillbox Hill - Tous droits réservés.</p>
+                <p>Développé par Zyrkof - v ALPHA</p>
+            </div>
+        </footer>
     </form>
     <script src="script.js"></script>
 </body>
