--- a/EMS/rapport-intervention.html
+++ b/EMS/rapport-intervention.html
@@ -41,8 +41,8 @@
                             <option value="">Chargement...</option>
                         </select>
                     </label>
-                    <label>Matricule<input type="text" placeholder="089" id="matriculeSelect" required></label>
-                    <label>Grade<input type="text" placeholder="Médecin" id="gradeSelect" required></label>
+                    <label>Matricule<input type="text" placeholder="089" id="matriculeSelect" readonly required></label>
+                    <label>Grade<input type="text" placeholder="Médecin" id="gradeSelect" readonly required></label>
                 </div>
             </div>
 
