--- a/EMS/rapport-intervention.html
+++ b/EMS/rapport-intervention.html
@@ -26,7 +26,7 @@
                 <div class="grid">
                     <label>Nom prénom<input type="text" placeholder="Doe John" id="nomPatient" required></label>
                     <label>N° dossier<input type="text" value="INTER" placeholder="INTER0001" id="numeroDossier" required></label>
-                    <label>Date de l’intervention<input type="text" id="dateInput" placeholder="JJ/MM/AAAA" required></label>
+                    <label>Date & Heure de l’intervention<input type="text" id="dateInput" placeholder="JJ/MM/AAAA" required></label>
                     <label>Numéro de téléphone<input id="telephoneInput" type="text" placeholder="(XXX) XXX-XXXX" required></label>
                     <label>Groupe sanguin<input type="text" placeholder="O+" required></label>
                     <label>Poids<input type="text" placeholder="95kg" required></label>
