--- a/EMS/rapport-intervention.html
+++ b/EMS/rapport-intervention.html
@@ -24,7 +24,7 @@
             <div class="section">
                 <div class="section-title">Patient :</div>
                 <div class="grid">
-                    <label>Nom prénom<input type="text" placeholder="Doe John" id="nomPatient" required></label>
+                    <label>Nom prénom<input type="text" placeholder="DOE John" id="nomPatient" required></label>
                     <label>N° dossier<input type="text" value="INTER" placeholder="INTER0001" id="numeroDossier" required></label>
                     <label>Date & Heure de l’intervention<input type="text" id="dateInput" placeholder="JJ/MM/AAAA à HH:MM" required></label>
                     <label>Numéro de téléphone<input id="telephoneInput" type="text" placeholder="(XXX) XXX-XXXX" required></label>
@@ -83,7 +83,7 @@
         <footer>
             <div class="footer-content">
                 <p>&copy; 2025 Hôpital Pillbox Hill - Tous droits réservés.</p>
-                <p>Développé par Zyrkof - v ALPHA</p>
+                <p>Développé par Mehdi KHARAMOFF | zyrkof ⸱ reubeudistingue - v1.0.0</p>
             </div>
         </footer>
     </form>
