--- a/TEST/rapport-intervention.html
+++ b/TEST/rapport-intervention.html
@@ -83,41 +83,11 @@
         <footer>
             <div class="footer-content">
                 <p>&copy; 2025 Hôpital Pillbox Hill - Tous droits réservés.</p>
-                <p>Développé par Mehdi KHARAMOFF | zyrkof ⸱ reubeudistingue - v1.0.0</p>
+                <p>Développé par Mehdi KHARAMOFF | zyrkof ⸱ reubeudistingue - vTEST</p>
             </div>
         </footer>
     </form>
-    <div id="loadingOverlay" style="
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    backdrop-filter: blur(5px);
-    background: rgba(255, 255, 255, 0.5);
-    z-index: 9999;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    visibility: hidden;
-    ">
-    <div class="spinner" style="
-        width: 50px;
-        height: 50px;
-        border: 6px solid #ccc;
-        border-top-color: #000;
-        border-radius: 50%;
-        animation: spin 1s linear infinite;
-        "></div>
-    </div>
-
-    <style>
-    @keyframes spin {
-        0% { transform: rotate(0deg); }
-        100% { transform: rotate(360deg); }
-    }
-    </style>
-
+    <div id="ecgLoader" class="ecg-loader" style="visibility: hidden;"></div>
     <script src="scripts/script.js"></script>
 </body>
 
