--- a/EMS/rapport-intervention.html
+++ b/EMS/rapport-intervention.html
@@ -87,6 +87,12 @@
             </div>
         </footer>
     </form>
+    <div class="ecg-loader">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 155.24">
+          <path d="M390,100.62H337.16c-1.64,0-3.35.24-4.82-.35-4.09-1.62-8.27-5.85-11.85-8.39-2.37-1.68-4.62-4.33-7.17-3.74-4.15,1-9.36,5.91-13,8.2-4.56,2.89-12.65,4-17.37,1.19-8.67-5.09-17.08-10.6-25.79-15.6-2.53-1.46-2.13-1.44-4.47.39L240.38,92c-3.18,2.48-6.8,6.51-10.48,8.19-1.91.87-4.31.47-6.48.47h-19c-2.14,0-7.42-.9-8.83.46-.88.85-1.16,4.16-1.49,5.32l-2.53,9.06-3.56,12.72L175.39,41.9l-1.8-12.22-13.68,83.47c-1.47-3.64-3-12-6.58-12.88-3.08-.77-7.58.21-10.74.3l-12.15.34c-1.79,0-2.56.27-3.79-.57-2.15-1.47-4-5.57-5.56-7.67L110,77.34,95.92,91c-1.73,1.69-3.89,4.8-6.06,5.91s-6.41.16-8.88.16l-13.53,0c-3.13,0-56.31,0-56.31.47"/>
+        </svg>
+      </div>
+      
     <script src="scripts/script.js"></script>
 </body>
 
