Fix routes fichiers md

--- a/TEST/EMS/index.html
+++ b/TEST/EMS/index.html
@@ -38,31 +38,31 @@
                 <i class="fa-solid fa-chevron-left"></i> Formations
               </div>
               <li class="item">
-                <a href="#" data-md="/pages/formations/chirurgie.md"><i class="fa-solid fa-syringe"></i> Chirurgie</a>
+                <a href="#" data-md="pages/formations/chirurgie.md"><i class="fa-solid fa-syringe"></i> Chirurgie</a>
               </li>
               <li class="item">
-                <a href="#" data-md="/pages/formations/psychologie.md"><i class="fa-solid fa-brain"></i> Psychologie</a>
+                <a href="#" data-md="pages/formations/psychologie.md"><i class="fa-solid fa-brain"></i> Psychologie</a>
               </li>
               <li class="item">
-                <a href="#" data-md="/pages/formations/permis.md"><i class="fa-solid fa-id-card"></i> Permis port d'arme</a>
+                <a href="#" data-md="pages/formations/permis.md"><i class="fa-solid fa-id-card"></i> Permis port d'arme</a>
               </li>
               <li class="item">
-                <a href="#" data-md="/pages/formations/pathologie.md"><i class="fa-solid fa-disease"></i> Pathologie</a>
+                <a href="#" data-md="pages/formations/pathologie.md"><i class="fa-solid fa-disease"></i> Pathologie</a>
               </li>
               <li class="item">
-                <a href="#" data-md="/pages/formations/oncologie.md"><i class="fa-solid fa-ribbon"></i> Oncologie</a>
+                <a href="#" data-md="pages/formations/oncologie.md"><i class="fa-solid fa-ribbon"></i> Oncologie</a>
               </li>
               <li class="item">
-                <a href="#" data-md="/pages/formations/kinesitherapie.md"><i class="fa-solid fa-dumbbell"></i> Kinésithérapie</a>
+                <a href="#" data-md="pages/formations/kinesitherapie.md"><i class="fa-solid fa-dumbbell"></i> Kinésithérapie</a>
               </li>
               <li class="item">
-                <a href="#" data-md="/pages/formations/ostheopathie.md"><i class="fa-solid fa-bone"></i> Osthéopathie</a>
+                <a href="#" data-md="pages/formations/ostheopathie.md"><i class="fa-solid fa-bone"></i> Osthéopathie</a>
               </li>
               <li class="item">
-                <a href="#" data-md="/pages/formations/gynecologie.md"><i class="fa-solid fa-venus"></i> Gynécologie</a>
+                <a href="#" data-md="pages/formations/gynecologie.md"><i class="fa-solid fa-venus"></i> Gynécologie</a>
               </li>
               <li class="item">
-                <a href="#" data-md="/pages/formations/cardiologie.md"><i class="fa-solid fa-heart-pulse"></i> Cardiologie</a>
+                <a href="#" data-md="pages/formations/cardiologie.md"><i class="fa-solid fa-heart-pulse"></i> Cardiologie</a>
               </li>              
             </ul>
           </li>
