--- a/EMS/bot-status.html
+++ b/EMS/bot-status.html
@@ -107,7 +107,7 @@
                     "Content-Type": "application/json"
                 },
                 body: JSON.stringify({
-                    username: "LSMS bot status",
+                    username: "LSMS Bot Status",
                     embeds: [embed]
                 })
             }).then(response => {
