--- a/EMS/bot-status.html
+++ b/EMS/bot-status.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bot status - LSMS Assistant</title>
+    <link rel="icon" href="media/favicon.png" type="image/png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
 
