--- a/EMS/bot-status.html
+++ b/EMS/bot-status.html
@@ -16,12 +16,17 @@
             color: #880000;
         }
 
-        body {
+        body,
+        html {
             font-family: 'DM Sans', sans-serif;
-            background: #FFFFFF;
-            color: #fff;
-            text-align: center;
-            padding-top: 100px;
+            background: #FFF;
+            padding: 20px;
+            display: flex;
+            color: var(--generalColor);
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            margin: 0;
         }
 
         /* Nouveau wrapper pour les boutons */
@@ -65,6 +70,22 @@
                 flex-direction: column;
                 align-items: center;
             }
+        }
+
+        footer {
+            background-color: var(--generalColor);
+            color: white;
+            padding: 10px 0;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+            font-size: 14px;
+            margin-top: 50px;
+        }
+
+        .footer-content p {
+            margin: 5px 0;
         }
     </style>
 </head>
