--- a/EMS/rapport-intervention.html
+++ b/EMS/rapport-intervention.html
@@ -83,7 +83,7 @@
         <footer>
             <div class="footer-content">
                 <p>&copy; 2025 Hôpital Pillbox Hill - Tous droits réservés.</p>
-                <p>Développé par Mehdi & Dean | Le Z & Joker - v1.0.1</p>
+                <p>Développé par Mehdi Kharamoff | Le Z - v1.0.2</p>
             </div>
         </footer>
     </form>
