--- a/EMS/rapport-intervention.html
+++ b/EMS/rapport-intervention.html
@@ -73,7 +73,7 @@
             <div class="director-section">
                 <label>Directeurs<input type="text" class="director-input" value="John DAVIS, Raul JIMENEZ" placeholder="Directeur, Co-directeur" readonly required></label>
                 <label>N° dossier<input type="text" value="INTER" class="director-input" readonly placeholder="INTER0001" id="numeroDossier" required></label>
-                <img src="https://i.imgur.com/1TUSHX3.png" class="stamp" alt="Cachet hôpital Pillbox Hill">
+                <img src="https://i.imgur.com/zICqaks.png" class="stamp" alt="Cachet hôpital Pillbox Hill">
             </div>
 
         </div>
