--- a/EMS/rapport-intervention.html
+++ b/EMS/rapport-intervention.html
@@ -71,7 +71,7 @@
             </div>
 
             <div class="director-section">
-                <label>Directeurs<input type="text" class="director-input" value="John DAVIS, Raul JIMENEZ" placeholder="Directeur, Co-directeur" readonly required></label>
+                <label>Directeurs<input type="text" class="director-input" value="Dean HELLMAN, Raul JIMENEZ" placeholder="Directeur, Co-directeur" readonly required></label>
                 <label>N° dossier<input type="text" value="INTER" class="director-input" readonly placeholder="INTER0001" id="numeroDossier" required></label>
                 <img src="https://i.imgur.com/zICqaks.png" class="stamp" alt="Cachet hôpital Pillbox Hill">
             </div>
@@ -83,7 +83,7 @@
         <footer>
             <div class="footer-content">
                 <p>&copy; 2025 Hôpital Pillbox Hill - Tous droits réservés.</p>
-                <p>Développé par Mehdi Kharamoff | Le Z - v1.0.2</p>
+                <p>Développé par Mehdi Kharamoff | Medouille - v1.0.2</p>
             </div>
         </footer>
     </form>
