--- a/TEST/EMS/whitelist.html
+++ b/TEST/EMS/whitelist.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Session Whitelist</title>
+    <title>Fantastic WL</title>
+    <link rel="icon" href="media/favicon.jpg" type="image/jpg">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -140,7 +141,7 @@
 <body>
     <div class="container">
         <img id="logo" src="https://i.imgur.com/b4IOdUn.jpeg" alt="Logo">
-        <h1>Nouvelle whitelist EMS</h1>
+        <h1>Nouvelle whitelist</h1>
 
         <div class="main-content">
             <div class="form-section">
