--- a/TEST/EMS/whitelist.html
+++ b/TEST/EMS/whitelist.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fantastic WL</title>
-    <link rel="icon" href="media/favicon.jpg" type="image/jpg">
+    <link rel="icon" href="media/favicon.png" type="image/png">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
