--- a/TEST/EMS/whitelist.html
+++ b/TEST/EMS/whitelist.html
@@ -140,7 +140,7 @@
 
 <body>
     <div class="container">
-        <img id="logo" src="https://i.imgur.com/b4IOdUn.jpeg" alt="Logo">
+        <img id="logo" src="media/favicon.png" alt="Logo">
         <h1>Nouvelle whitelist</h1>
 
         <div class="main-content">
