--- a/TEST/EMS/whitelist.html
+++ b/TEST/EMS/whitelist.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fantastic WL</title>
+    <title>WhiteList - Fantastic WL</title>
     <link rel="icon" href="media/favicon.png" type="image/png">
     <style>
         body {
